<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_account_circle"
            android:contentDescription="@string/account_icon_desc" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:autofillHints="username"
            android:id="@+id/username_input"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:id="@+id/password_input"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:id="@+id/login_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_login"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:id="@+id/facebook"
                android:src="@drawable/facebook"
                android:contentDescription="@string/facebook_desc"
                android:importantForAccessibility="yes"/>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:id="@+id/linkedin"
                android:src="@drawable/linkedin"
                android:contentDescription="@string/linkedin_desc"
                android:importantForAccessibility="yes"/>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_margin="16dp"
                android:id="@+id/google"
                android:src="@drawable/google"
                android:contentDescription="@string/google_desc"
                android:importantForAccessibility="yes"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>